--- a/templates/report.html
+++ b/templates/report.html
@@ -18,7 +18,7 @@
         <div class="nav-right">
             <img src="../static/images/image.png" alt="profile-menu" id="profile-icon">
                 <div class="dropdown-content" id="dropdown-menu">
-                    <a href="#">Tips</a>
+                    <a href="{{ url_for('tips') }}" target="_blank">Tips</a>
                     <a href="#">Change Password</a>
                     <a href="{{ url_for('logout') }}">Log Out</a>
                 </div>
